# earth-embeddings

./: .gitattributes  AGENTS.md  LICENSE  README.md  makefile  pyproject.toml
R/: aee-distance-variance.R  misc.R  neon_variancepartitioning.R  openlandmap.R  plot_latlong_map.R  read_gold.R  usgs_geochem copy.R  usgs_geochem.R
data/: USGS_soil_geochemfeatures.csv  USGS_soil_geochemfeatures_cols1_2_18_19_withvectors.csv  USGS_soil_geochemfeatures_cols1_2_18_19_withvectors_skipped.csv  geochem_nlocs.tsv  locations-small.csv  locations_missinglatlong.csv  locations_with_vectors.csv  locations_with_vectors_skipped.csv  usgs_geochem_wembeddings_targets.csv
docs/dev/: README.md  dependencies.md  documentation.md  github.md  makefile.md  pypi.md  settings.md  testing.md
earth_embeddings/: _version.py  fetch_aee.py
earth_embeddings.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
earth_embeddings/conf/: settings.py
results/: AEE_USGS_soil_geochemfeatures_lasso.tsv  AEE_openlandstrainingdata_soil_physicochem_lasso.tsv
tests/: test_settings.py
