[build-system]
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[tool.setuptools.package-data]
earth_embeddings = ["py.typed"]

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "earth_embeddings/_version.py"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[project]
authors = [{ "name" = "Ulas Karaoz" }]
description = "Tools for fetching and wrangling with AlphaEarth embeddings"
dynamic = ["version"]
license = { "file" = "LICENSE" }
name = "earth_embeddings"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"

dependencies = [
  "ee>=0.2",
  "geemap>=0.37.2",
  "pydantic~=2.0",
  "pydantic-settings",
]

[dependency-groups]
dev = [
  "build",
  "dapperdata",
  "glom",
  "greenlet",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "ruff",
  "tombi",
  "uv"
]

[tool.ruff]
exclude = [".venv", "./earth_embeddings/_version.py"]
line-length = 120

[tool.coverage.run]
concurrency = ["thread", "greenlet"]
omit = [
  "./earth_embeddings/_version.py",
  "./earth_embeddings/__init__.py",
  "./tests/*",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
strict_optional = true
warn_return_any = true
warn_unused_ignores = true

[tool.uv]
exclude-newer = "1 week"
